--- a/designer.ui
+++ b/designer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1298</width>
-    <height>653</height>
+    <width>1483</width>
+    <height>757</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,8 +20,8 @@
    <widget class="QGroupBox" name="gb_otoparkBilgileri">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
+      <x>110</x>
+      <y>60</y>
       <width>621</width>
       <height>291</height>
      </rect>
@@ -115,7 +115,7 @@ font-size:20px</string>
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -196,8 +196,8 @@ font-size:20px</string>
    <widget class="QGroupBox" name="gb_kamera">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>10</y>
+      <x>760</x>
+      <y>60</y>
       <width>611</width>
       <height>291</height>
      </rect>
@@ -213,7 +213,7 @@ color: rgb(240, 245, 245);
 </string>
     </property>
     <property name="title">
-     <string>Kamera Görüntüsü</string>
+     <string>Giriş Kapısı</string>
     </property>
     <widget class="QLabel" name="lb_kamera">
      <property name="geometry">
@@ -238,8 +238,8 @@ color: rgb(240, 245, 245);
    <widget class="QGroupBox" name="gb_sistemKontrol">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>320</y>
+      <x>110</x>
+      <y>380</y>
       <width>621</width>
       <height>291</height>
      </rect>
@@ -259,80 +259,8 @@ color: rgb(240, 245, 245);
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>40</y>
-       <width>231</width>
-       <height>91</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Plaka No:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="le_plakaNo">
-          <property name="styleSheet">
-           <string notr="true">border-radius: 4px;
-border: 1px solid #e0e4e7;
-padding: 3px 5px;
-background-color:#e2e8f0;
-color:#0f172a;
-letter-spacing:2px</string>
-          </property>
-          <property name="text">
-           <string>34ABC562</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton">
-        <property name="styleSheet">
-         <string notr="true">border: 1px solid #81E6D9;
-border-radius: 5px;
-padding: 6px 0px;
-color:#81E6D9;
-font: 700 10pt &quot;Segoe UI&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Araç Girişi Yap</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QPushButton" name="btn_aracSec">
-     <property name="geometry">
-      <rect>
-       <x>460</x>
-       <y>20</y>
-       <width>151</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border: 2px solid #81E6D9;
-border-radius: 8px;
-padding: 8px 4px;
-color:#81E6D9;
-font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Arac Sec</string>
-     </property>
-    </widget>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
        <y>170</y>
-       <width>231</width>
+       <width>311</width>
        <height>103</height>
       </rect>
      </property>
@@ -407,7 +335,7 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>410</x>
@@ -449,12 +377,82 @@ color:black</string>
       </item>
      </layout>
     </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>40</y>
+       <width>261</width>
+       <height>85</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Plaka No:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="le_plakaNo">
+          <property name="styleSheet">
+           <string notr="true">border-radius: 4px;
+border: 1px solid #e0e4e7;
+padding: 3px 5px;
+background-color:#e2e8f0;
+color:#0f172a;
+letter-spacing:2px</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QPushButton" name="btn_aracGirisiYap">
+          <property name="styleSheet">
+           <string notr="true">border: 1px solid #81E6D9;
+border-radius: 5px;
+padding: 6px 0px;
+color:#81E6D9;
+font: 700 10pt &quot;Segoe UI&quot;;</string>
+          </property>
+          <property name="text">
+           <string>Giriş Yap</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="btn_aracCikisiYap">
+          <property name="styleSheet">
+           <string notr="true">border: 2px solid #81E6D9;
+border-radius: 8px;
+padding: 8px 4px;
+color:#81E6D9;
+font: 700 9pt &quot;Segoe UI&quot;;</string>
+          </property>
+          <property name="text">
+           <string>Çıkış Yap</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="gb_aracBilgileri">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>320</y>
+      <x>760</x>
+      <y>380</y>
       <width>611</width>
       <height>291</height>
      </rect>
@@ -470,7 +468,7 @@ color: rgb(240, 245, 245);
     <property name="title">
      <string>Araç Bilgileri</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -551,7 +549,7 @@ font-size:22px;
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>210</x>
